<resources>
    <string name="app_name">Life and Gate</string>

    <string name="all_field_mandate">All fields are mandatory</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="check_network">Check network connection</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="strong_password">Enter a strong password (min length 6)</string>
    <string name="password_mismatch">Password mismatch. Please reconfirm your password.</string>
    <string name="enter_valid_phone">Enter a valid phone number</string>
    <string name="city_mandatory">Please select your city.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_para">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est</string>
    <string name="lorem_small_para">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</string>
    <string name="plan_start_from">Plans start from : </string>
    <string name="search_coaches">Search Coaches</string>
    <string name="plan_start_at">Plan Start at</string>
    <string name="accept_all_the_rules_and_regulations">Accept all the rules and regulations</string>
    <string name="please_sign_in_to_continue">Please sign in to continue!!!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="by_registering_you_agree_with"><![CDATA[By Registering you Agree with our Terms & Conditions, and Privacy Policy]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="perform_workout">Perform workout</string>
    <string name="submit">Submit</string>
    <string name="message_the_coach">Message the coach</string>
    <string name="send">Send</string>
    <string name="add_burned_calorie">Add burned calories</string>
    <string name="enter_value">Enter value</string>
    <string name="add_consumed_calories">Add consumed calories</string>
    <string name="calories_consumed">Calories consumed</string>
    <string name="other">Other</string>
    <string name="add_weights">Add weights</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="enter_manually">Enter manually</string>
    <string name="coach_filter">Coach Filter</string>
    <string name="clear">Clear</string>
    <string name="coach_type">Coach Type</string>
    <string name="select_coach_type">Select Coach Type</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="choose_image">Choose Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="intake_calories">Add intake calories</string>
    <string name="burning">Add burning calories</string>
    <string name="intake_calories_goal">Intake Calories Goal</string>
    <string name="burned_calorie_goal">Burned Calories Goal</string>
    <string name="clear_all">Clear All</string>
    <string name="state">State/Governorate</string>
    <string name="select_state">Select State</string>
    <string name="services">Services</string>
    <string name="select_services">Select Services</string>
    <string name="search">Search</string>
    <string name="no_plans">You did not purchase any workout plans. You can go to coaches page to purchase a workout plan.</string>
    <string name="no_diet">You did not purchase any diet plans. You can go to coaches page to find a nutritionist to purchase a diet plan.</string>
    <string name="default_notification_channel_id">channel123</string>
    <string name="terms"><u>Terms and Conditions</u></string>
    <string name="feature_programs">Featured Programs</string>
</resources>