<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.auth.signup.SignUpFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.lifegate.app.ui.fragments.auth.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/register_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_plan_header_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textAllCaps="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:inputType="textPersonName"
                    android:hint="@string/full_name"
                    android:text="@={viewmodel.name}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_id"
                    android:text="@={viewmodel.email}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/mobile"
                    android:text="@={viewmodel.phone}"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_inputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginTop="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/country_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:maxLines="1"
                        android:hint="Country"
                        app:autoSizeTextType="uniform" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_inputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginTop="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/city_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:maxLines="1"
                        android:hint="City"
                        app:autoSizeTextType="uniform" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:text="@={viewmodel.password}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:text="@={viewmodel.confirmPass}"/>

                <Button
                    android:id="@+id/item"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> viewmodel.signUp()}"
                    android:text="@string/create_an_account"
                    android:background="@drawable/curvedbutton"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/by_registering_you_agree_with"
                    android:textSize="13sp"
                    android:textColor="@color/lifegate_black_txt"
                    android:textAllCaps="false"/>

                <LinearLayout
                    android:id="@+id/item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textSize="13sp"
                        android:textColor="@color/lifegate_black_txt"
                        android:textAllCaps="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/sign_in"
                        android:textSize="13sp"
                        android:textColor="@color/lifegate_red_txt"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>