<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.auth.login.LoginFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.lifegate.app.ui.fragments.auth.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/login_main_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textAllCaps="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.email}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:id="@+id/tv_forgot_password"
                    android:text="@string/forgot_password"
                    android:textSize="12sp"
                    android:textColor="@color/lifegate_blue_txt"
                    android:textAllCaps="true"/>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/curvedbutton"
                    android:text="@string/sign_in"
                    android:onClick="@{() -> viewmodel.login()}"
                    android:textAllCaps="true"/>

                <LinearLayout
                    android:id="@+id/login_go_to_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="13sp"
                        android:textColor="@color/lifegate_black_txt"
                        android:textAllCaps="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:layout_marginStart="4dp"
                        android:textSize="13sp"
                        android:textColor="@color/lifegate_red_txt"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_forgot_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="@string/bottom_sheet_behavior"
            android:elevation="60dp"
            android:background="@drawable/bottom_sheet_shape_blue">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dimen20dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/lock"
                            android:layout_gravity="center"
                            android:layout_marginBottom="50dp"
                            app:tint="@color/white">

                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_forgot"
                            android:text="Forgot Your\n Password?"
                            android:textColor="@color/white"
                            android:textSize="22dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/dimen20dp"
                            android:gravity="center">

                        </TextView>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:id="@+id/et_email"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:layout_marginTop="@dimen/dimen20dp"
                            android:layout_below="@+id/tv_forgot"
                            android:padding="@dimen/dimen10dp"
                            android:text="@={viewmodel.userEmail}"
                            android:background="@drawable/curved_blue_border"
                            />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/btn_send"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="@dimen/dimen20dp"
                        android:text="Send"
                        android:onClick="@{() -> viewmodel.forgotPassword()}"
                        android:textColor="@color/white"
                        android:background="#7A191919"
                        android:layout_marginBottom="40dp">

                    </androidx.appcompat.widget.AppCompatButton>
                </RelativeLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>